testdata/baselines/reference/submodule/conformance/importTag17.errors.txt
/a.js(5,15): error TS2749: 'Import' refers to a value, but is being used as a type here. Did you mean 'typeof Import'?
/a.js(12,15): error TS2749: 'Require' refers to a value, but is being used as a type here. Did you mean 'typeof Require'?


==== /node_modules/@types/foo/package.json (0 errors) ====
    {
        "name": "@types/foo",
        "version": "1.0.0",
        "exports": {
            ".": {
                "import": "./index.d.mts",
                "require": "./index.d.cts"
            }
        }
    }
    
==== /node_modules/@types/foo/index.d.mts (0 errors) ====
    export declare const Import: "module";
    
==== /node_modules/@types/foo/index.d.cts (0 errors) ====
    export declare const Require: "script";
    
==== /a.js (2 errors) ====
    /** @import { Import } from 'foo' with { 'resolution-mode': 'import' } */
    /** @import { Require } from 'foo' with { 'resolution-mode': 'require' } */
    
    /**
     * @returns { Import }
                  ~~~~~~
!!! error TS2749: 'Import' refers to a value, but is being used as a type here. Did you mean 'typeof Import'?
     */
    export function f1() {
        return 1;
    }
    
    /**
     * @returns { Require }
                  ~~~~~~~
!!! error TS2749: 'Require' refers to a value, but is being used as a type here. Did you mean 'typeof Require'?
     */
    export function f2() {
        return 1;
    }
    